# MoltFocus

./: .gitignore  ONBOARD_AGENT_OPENCLAW.md  README.md  README_AGENT.md  demo.html  moltfocus  pyproject.toml  setup.sh
cli/: moltfocus.py  requirements.txt
core/: __init__.py  agent_context.py  analytics.py  checkbox.py  fileio.py  finalize.py  focus.py  hooks.py  models.py  rating.py  reflections.py  scheduler.py  tasks.py  workspace.py
docs/: FEATURES.md  SETUP.md
scripts/: bootstrap_server.sh
template/planner/: state.json
template/planner/latest/: checkin_draft.json  plan.md
template/reflections/: reflections.md
tests/: conftest.py  test_agent_context.py  test_analytics.py  test_checkbox.py  test_finalize.py  test_focus.py  test_hooks.py  test_models.py  test_rating.py  test_scheduler.py  test_tasks.py
ui/: README.md  app.py
ui/static/: app.js  style.css
